added aria support and fixed submenu dropdown issues

--- a/responsive-nav.html
+++ b/responsive-nav.html
@@ -24,7 +24,7 @@
         <nav class="mobile-menu" role="navigation" title="Mobile Menu" aria-label="mobile menu">
             <ul id="mobile-menu">
                 <li><a href="#">Home</a></li>
-                <li><a href="#" class="nav-trigger">Services</a>
+                <li><a href="#" class="topItem">Services</a>
                     <ul class="sub-menu">
                         <li>Service 1</li>
                         <li>Service 2</li>
